# al-pulse

./: .gitignore  Cargo.toml  Dockerfile  railway.toml  update_header.sh  vercel.json
.agents/skills/weekly-ai-roundup/: SKILL.md
backend/: Cargo.toml
backend/src/: db.rs  feeds.rs  main.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/public/: weekly_roundups.json
frontend/src/: favorites.rs  footer.rs  header.rs  main.rs  weekly.rs
