[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
feed-rs = "1.4"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "v5", "serde"] }
urlencoding = "2.1.3"
