[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
gloo-net = "0.5.0"
web-sys = { version = "0.3.69", features = ["HtmlInputElement", "Window", "Document"] }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
console_error_panic_hook = "0.1.7"
leptos_router = { version = "0.6.11", features = ["csr"] }
leptos_meta = { version = "0.6.11", features = ["csr"] }
